# Glove

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md
Glove/: CMakeLists.txt
Glove/src/Core/: Core.cpp  pch.h
Glove/src/Core/CLITerminal/: CLI.cpp  CLI.h
Glove/src/Core/Logger/: Log.cpp  Log.h
